--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,13 +16,8 @@ set-window-option -g window-status-current-bg colour39
 set-window-option -g window-status-current-fg colour15
 
 
-# Bind function keys.
-bind -n F1 select-window -t 1
-bind -n F2 select-window -t 2
-bind -n F3 select-window -t 3
-bind -n F4 select-window -t 4
-bind -n F5 select-window -t 5
-bind -n F6 select-window -t 6
-bind -n F7 select-window -t 7
-bind -n F8 select-window -t 8
+# Enabling use of a mouse.
+set -g mode-mouse on
+setw -g mouse-select-window on
+setw -g mouse-select-pane on
 
