--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "vim/vim/bundle/vim-eunuch"]
 	path = vim/vim/bundle/vim-eunuch
 	url = https://github.com/tpope/vim-eunuch.git
+[submodule "vim/vim/bundle/sudo.vim"]
+	path = vim/vim/bundle/sudo.vim
+	url = https://github.com/vim-scripts/sudo.vim
