Update for Ubuntu 16.04

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,17 +1,6 @@
-#
-# Created by Isaac Bythewoo:
-#
-
-
 set-option -g prefix C-a
-
-
-# Statusbar properties.
-set -g status-left "#H"
-set -g status-right "#[bg=colour39]#[fg=colour15]#(date)"
-set -g display-time 3000
 set -g status-bg colour235
 set -g status-fg colour15
 set-window-option -g window-status-current-bg colour39
 set-window-option -g window-status-current-fg colour15
-
+bind c new-window -c "#{pane_current_path}"
