--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "indentline"]
 	path = vim/vim/bundle/indentline
 	url = https://github.com/yggdroot/indentline
+[submodule "vim/vim/bundle/vim-better-whitespace"]
+	path = vim/vim/bundle/vim-better-whitespace
+	url = https://github.com/ntpeters/vim-better-whitespace
