--- a/.gitmodules
+++ b/.gitmodules
@@ -1,25 +1,25 @@
-[submodule "vim-sensible"]
+[submodule "vim/vim/bundle/Vundle.vim"]
+	path = vim/vim/bundle/Vundle.vim
+	url = https://github.com/VundleVim/Vundle.vim
+[submodule "vim/vim/bundle/vim-sensible"]
 	path = vim/vim/bundle/vim-sensible
 	url = https://github.com/tpope/vim-sensible
-[submodule "vim-surround"]
+[submodule "vim/vim/bundle/vim-surround"]
 	path = vim/vim/bundle/vim-surround
 	url = https://github.com/tpope/vim-surround
-[submodule "vim-airline"]
+[submodule "vim/vim/bundle/vim-airline"]
 	path = vim/vim/bundle/vim-airline
 	url = https://github.com/bling/vim-airline
-[submodule "ctrlp.vim"]
+[submodule "vim/vim/bundle/ctrlp.vim"]
 	path = vim/vim/bundle/ctrlp.vim
 	url = https://github.com/ctrlpvim/ctrlp.vim
-[submodule "vim-indent-guides"]
+[submodule "vim/vim/bundle/vim-indent-guides"]
 	path = vim/vim/bundle/vim-indent-guides
 	url = https://github.com/nathanaelkane/vim-indent-guides
-[submodule "vim-sensible"]
-	path = vim/vim/bundle/vim-sensible
-	url = https://github.com/tpope/vim-sensible
-[submodule "vim-sleuth"]
+[submodule "vim/vim/bundle/vim-sleuth"]
 	path = vim/vim/bundle/vim-sleuth
 	url = https://github.com/tpope/vim-sleuth
-[submodule "indentline"]
+[submodule "vim/vim/bundle/indentline"]
 	path = vim/vim/bundle/indentline
 	url = https://github.com/yggdroot/indentline
 [submodule "vim/vim/bundle/vim-better-whitespace"]
