--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,10 @@
 set-option -g prefix C-a
+set-option -g default-terminal "screen-256color"
+set-option -sg escape-time 10
+
 set -g status-bg colour235
 set -g status-fg colour15
 set-window-option -g window-status-current-bg colour39
 set-window-option -g window-status-current-fg colour15
+
 bind c new-window -c "#{pane_current_path}"
