Disable pylint enable flake8

--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -20,5 +20,7 @@
     "files.trimTrailingWhitespace": true,
     "explorer.confirmDragAndDrop": false,
     "explorer.confirmDelete": false,
-    "files.eol": "\n"
+    "files.eol": "\n",
+    "python.linting.pylintEnabled": false,
+    "python.linting.flake8Enabled": true
 }
