Enable smart commit

--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -22,5 +22,6 @@
     "explorer.confirmDelete": false,
     "files.eol": "\n",
     "python.linting.pylintEnabled": false,
-    "python.linting.flake8Enabled": true
+    "python.linting.flake8Enabled": true,
+    "git.enableSmartCommit": true
 }
