Remove exact paths and terminal exit alert

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -39,13 +39,10 @@
   "html.format.wrapLineLength": 80,
   "prettier.htmlWhitespaceSensitivity": "ignore",
   "prettier.printWidth": 80,
-  "python.formatting.blackPath": "/home/dev/.pyenv/shims/black",
   "python.formatting.provider": "black",
   "python.languageServer": "Pylance",
   "python.linting.flake8Enabled": true,
-  "python.linting.flake8Path": "/home/dev/.pyenv/shims/flake8",
   "python.linting.pylintEnabled": false,
-  "python.sortImports.path": "/home/dev/.pyenv/shims/isort",
   "python.terminal.activateEnvironment": false,
   "remote.containers.copyGitConfig": false,
   "remote.restoreForwardedPorts": false,
@@ -53,6 +50,7 @@
   "settingsSync.ignoredSettings": [ "-remote.containers.copyGitConfig" ],
   "telemetry.telemetryLevel": "off",
   "terminal.integrated.cursorBlinking": true,
+  "terminal.integrated.showExitAlert": false,
   "update.showReleaseNotes": false,
   "window.restoreWindows": "none",
   "workbench.colorCustomizations": { "terminal.foreground": "#00FF00" },
